(report): add report feature to display the report of the transaction today
